[package]
name = "traceroute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
pnet_datalink = "0.34.0"
rand = "0.8.5"
async-std = "1.12.0"
dns-lookup = "2.0.4"
clap = { version = "4.4.13", features = ["derive"] }
